# modal-mcp-server

./: Dockerfile  LICENSE  README.md  docker-compose.yml  example_app.py  integration_test.py  main.py  mcp_client.py  mcp_schema.py  mcp_server.py  pyproject.toml  sample_app.py  test_mcp_server.py
src/modal_mcp/: server.py
