[project]
name = "modal-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for management of Modal functions and apps."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi[standard]>=0.68.0",
    "uvicorn>=0.15.0",
    "modal>=0.55.4094",
    "python-dotenv>=0.19.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
